--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,8 @@ okhttp = "4.12.0"
 retrofit2KotlinxSerializationConverter = "1.0.0"
 retrofit = "2.9.0"
 hiltAndroid = "2.49"
-hiltAndroidCompiler = "2.48"
+# Hilt 버전을 2.49로 통일합니다.
+hiltAndroidCompiler = "2.49"
 hiltNavigationCompose = "1.2.0"
 coilCompose = "2.5.0"
 coreSplashscreen = "1.0.1"
@@ -61,4 +62,3 @@ androidx-ui-util = { module = "androidx.compose.ui:ui-util" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
