--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.5.0"
-kotlin = "1.9.0"
+kotlin = "1.9.25"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -19,7 +19,7 @@ okhttp = "4.12.0"
 retrofit2KotlinxSerializationConverter = "1.0.0"
 retrofit = "2.9.0"
 hiltAndroid = "2.48"
-# Hilt 버전을 2.48로 통일합니다.
+# hiltAndroidCompiler 버전을 2.49로 통일합니다.
 hiltAndroidCompiler = "2.48"
 hiltNavigationCompose = "1.2.0"
 coilCompose = "2.5.0"
