Home State를 관리하기 위해 확장함수 정의 , API부터 영화목록,인기영화목록을 가져오는 HomeViewModel정의

--- a/.gitignore
+++ b/.gitignore
@@ -42,9 +42,6 @@ local.properties
 *.jks
 *.keystore
 
-# External native build folder
-.externalNativeBuild/
-
 # Instant Run
 .instantrun/
 
@@ -54,3 +51,4 @@ local.properties
 # Gemini related
 GEMINI.md
 CLAUDE.md
+AGENTS.md
